# tandem_learning

./: __init__.py  inference_models.py  main_cifar10.py  main_cifar10_sj.py  pyproject.toml  snn2cg.py  test.py
lib/: classification.py  snn.py
models/: cifar10.py  cifar10_sj.py
snn2cg/: HardwareNet.py  __init__.py  genConfig.py  genRandomData.py  hwConfig.py  hwSim.py  layers.py  main.py  operators.py  parser.py  runtime.py  simpleConvert.py  softwareNet.py  spike_dag.py  spike_layers.py  transformer.py  utils.py
snn2cg/functions/: buildCores.py  run.sh  runSimulator.py  run_test2.sh  run_test3.sh  run_test4.sh  simpleCore.py  testFrame3_2.py  testFrame3_FPGA.py
snn2cg/functions/config/: example_config.md
